@@ -73,22 +73,22 @@ function form_save() {
 			$items = array(
 				0 => array(
 					"color_id" => "0",
-					"graph_type_id" => "9",
-					"consolidation_function_id" => "4",
+					"graph_type_id" => GRAPH_ITEM_TYPE_GPRINT,
+					"consolidation_function_id" => RRD_CF_LAST,
 					"text_format" => __("Current:"),
 					"hard_return" => ""
 					),
 				1 => array(
 					"color_id" => "0",
-					"graph_type_id" => "9",
-					"consolidation_function_id" => "1",
+					"graph_type_id" => GRAPH_ITEM_TYPE_GPRINT,
+					"consolidation_function_id" => RRD_CF_AVERAGE,
 					"text_format" => __("Average:"),
 					"hard_return" => ""
 					),
 				2 => array(
 					"color_id" => "0",
-					"graph_type_id" => "9",
-					"consolidation_function_id" => "3",
+					"graph_type_id" => GRAPH_ITEM_TYPE_GPRINT,
+					"consolidation_function_id" => RRD_CF_MAX,
 					"text_format" => __("Maximum:"),
 					"hard_return" => CHECKED
 					));
@@ -140,23 +140,41 @@ function form_save() {
 			if (empty($_POST["sequence"])) {
 				$_POST["sequence"] = get_sequence($_POST["sequence"], "sequence", "graph_templates_item", "local_graph_id=" . $_POST["local_graph_id"]);
 			}
-			$save["id"] = $_POST["graph_template_item_id"];
-			$save["graph_template_id"] = $_POST["graph_template_id"];
-			$save["local_graph_template_item_id"] = $_POST["local_graph_template_item_id"];
-			$save["local_graph_id"] = $_POST["local_graph_id"];
-			$save["task_item_id"] = form_input_validate($_POST["task_item_id"], "task_item_id", "", true, 3);
-			$save["color_id"] = form_input_validate((isset($item["color_id"]) ? $item["color_id"] : $_POST["color_id"]), "color_id", "", true, 3);
-			/* if alpha is disabled, use invisible_alpha instead */
-			if (!isset($_POST["alpha"])) {$_POST["alpha"] = $_POST["invisible_alpha"];}
-			$save["alpha"] = form_input_validate((isset($item["alpha"]) ? $item["alpha"] : $_POST["alpha"]), "alpha", "", true, 3);
+			$save["id"] = form_input_validate($_POST["id"], "id", "^[0-9]+$", false, 3);
+			$save["graph_template_id"] = form_input_validate($_POST["graph_template_id"], "graph_template_id", "^[0-9]+$", false, 3);
+			$save["local_graph_template_item_id"] = form_input_validate($_POST["local_graph_template_item_id"], "local_graph_template_item_id", "^[0-9]+$", false, 3);
+			$save["local_graph_id"] = form_input_validate($_POST["local_graph_id"], "local_graph_id", "^[0-9]+$", false, 3);
+			$save["task_item_id"] = form_input_validate($_POST["task_item_id"], "task_item_id", "^[0-9]+$", true, 3);
+			$save["color_id"] = form_input_validate((isset($item["color_id"]) ? $item["color_id"] : $_POST["color_id"]), "color_id", "^[0-9]+$", true, 3);
+			/* if alpha is disabled, use opacity=FF instead */
+			if (!isset($_POST["alpha"])) {$_POST["alpha"] = "FF";}
+			$save["alpha"] = form_input_validate((isset($item["alpha"]) ? $item["alpha"] : $_POST["alpha"]), "alpha", "^[a-fA-F0-9]+$", true, 3);
 			$save["graph_type_id"] = form_input_validate((isset($item["graph_type_id"]) ? $item["graph_type_id"] : $_POST["graph_type_id"]), "graph_type_id", "", true, 3);
-			$save["cdef_id"] = form_input_validate($_POST["cdef_id"], "cdef_id", "", true, 3);
-			$save["consolidation_function_id"] = form_input_validate((isset($item["consolidation_function_id"]) ? $item["consolidation_function_id"] : $_POST["consolidation_function_id"]), "consolidation_function_id", "", true, 3);
+			if (isset($_POST["line_width"]) || isset($item["line_width"])) {
+				$save["line_width"] = form_input_validate((isset($item["line_width"]) ? $item["line_width"] : $_POST["line_width"]), "line_width", "^[0-9]+[\.,]+[0-9]+$", true, 3);
+			}else { # make sure to transfer old LINEx style into line_width on save
+				switch ($save["graph_type_id"]) {
+					case GRAPH_ITEM_TYPE_LINE1:
+						$save["line_width"] = 1;
+						break;
+					case GRAPH_ITEM_TYPE_LINE2:
+						$save["line_width"] = 2;
+						break;
+					case GRAPH_ITEM_TYPE_LINE3:
+						$save["line_width"] = 3;
+						break;
+					default:
+						$save["line_width"] = 0;
+				}
+			}
+			$save["cdef_id"] = form_input_validate($_POST["cdef_id"], "cdef_id", "^[0-9]+$", true, 3);
+			$save["vdef_id"] = form_input_validate($_POST["vdef_id"], "vdef_id", "^[0-9]+$", true, 3);
+			$save["consolidation_function_id"] = form_input_validate((isset($item["consolidation_function_id"]) ? $item["consolidation_function_id"] : $_POST["consolidation_function_id"]), "consolidation_function_id", "^[0-9]+$", true, 3);
 			$save["text_format"] = form_input_validate((isset($item["text_format"]) ? $item["text_format"] : $_POST["text_format"]), "text_format", "", true, 3);
 			$save["value"] = form_input_validate($_POST["value"], "value", "", true, 3);
 			$save["hard_return"] = form_input_validate(((isset($item["hard_return"]) ? $item["hard_return"] : (isset($_POST["hard_return"]) ? $_POST["hard_return"] : ""))), "hard_return", "", true, 3);
-			$save["gprint_id"] = form_input_validate($_POST["gprint_id"], "gprint_id", "", true, 3);
-			$save["sequence"] = $_POST["sequence"];
+			$save["gprint_id"] = form_input_validate($_POST["gprint_id"], "gprint_id", "^[0-9]+$", true, 3);
+			$save["sequence"] = form_input_validate($_POST["sequence"], "sequence", "^[0-9]+$", false, 3);
 
 			if (!is_error_message()) {
 				$graph_template_item_id = sql_save($save, "graph_templates_item");
@@ -391,7 +409,6 @@ function item_edit() {
 	form_hidden_box("sequence", (isset($template_item) ? $template_item["sequence"] : "0"), "");
 	form_hidden_box("_graph_type_id", (isset($template_item) ? $template_item["graph_type_id"] : "0"), "");
 	form_hidden_box("save_component_item", "1", "");
-	form_hidden_box("invisible_alpha", $form_array["alpha"]["value"], "FF");
 	form_hidden_box("hidden_rrdtool_version", read_config_option("rrdtool_version"), "");
 
 	html_end_box();
