@@ -959,6 +959,29 @@ $struct_graph_item = array(
 		"none_value" => "None",
 		"description" => __("The data source to use for this graph item."),
 		),
+	"consolidation_function_id" => array(
+		"friendly_name" => __("Consolidation Function"),
+		"method" => "drop_array",
+		"array" => $consolidation_functions,
+		"default" => "0",
+		"description" => __("How data for this item is represented statistically on the graph."),
+		),
+	"graph_type_id" => array(
+		"friendly_name" => __("Graph Item Type"),
+		"method" => "drop_array",
+		"array" => $graph_item_types,
+		"default" => "0",
+		"description" => __("How data for this item is represented visually on the graph."),
+		),
+	"line_width" => array(
+		"friendly_name" => __("Line Width (decimal)"),
+		"method" => "textbox",
+		"max_length" => "5",
+		"default" => "",
+		"size" => "5",
+		"description" => __("In case LINE was chosen, specify width of line here. Not available for rrdtool-1.0.x."),
+		"class" => "not_RRD_1_0_x",
+		),
 	"color_id" => array(
 		"friendly_name" => __("Color"),
 		"method" => "drop_color",
@@ -974,20 +997,6 @@ $struct_graph_item = array(
 		"description" => __("The opacity/alpha channel of the color. Not available for rrdtool-1.0.x."),
 		"class" => "not_RRD_1_0_x",
 		),
-	"graph_type_id" => array(
-		"friendly_name" => __("Graph Item Type"),
-		"method" => "drop_array",
-		"array" => $graph_item_types,
-		"default" => "0",
-		"description" => __("How data for this item is represented visually on the graph."),
-		),
-	"consolidation_function_id" => array(
-		"friendly_name" => __("Consolidation Function"),
-		"method" => "drop_array",
-		"array" => $consolidation_functions,
-		"default" => "0",
-		"description" => __("How data for this item is represented statistically on the graph."),
-		),
 	"cdef_id" => array(
 		"friendly_name" => __("CDEF Function"),
 		"method" => "drop_sql",
@@ -997,12 +1006,12 @@ $struct_graph_item = array(
 		"description" => __("A CDEF (math) function to apply to this item on the graph."),
 		),
 	"vdef_id" => array(
-		"friendly_name" => __("VDEF Function. Not available for rrdtool-1.0.x."),
+		"friendly_name" => __("VDEF Function"),
 		"method" => "drop_sql",
 		"sql" => "select id,name from vdef order by name",
 		"default" => "0",
 		"none_value" => "None",
-		"description" => __("A VDEF (math) function to apply to this item on the legend."),
+		"description" => __("A VDEF (math) function to apply to this item on the legend. Not available for rrdtool-1.0.x."),
 		"class" => "not_RRD_1_0_x",
 		),
 	"value" => array(
