@@ -121,6 +121,7 @@ Cacti CHANGELOG
 -feature: Allow non-numeric form row ids in form API
 -feature: User UI Visual Settings Saved Between Login Sessions
 -feature: Custom Legend: customize the entries added in one go to your liking
+-feature: support LINE<width> using decimal xx.xx line widths for RRDTool > 1.0.x
 
 0.8.7e
 
